header html & css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
 </head>
 
 <body>
-
+    <!-- header -->
+    <header>
+        <nav>
+            <a href="" class="logo">SYNX<br><span>multipurpose</span></a>
+            <ul>
+                <li><a href="">home</a></li>
+                <li><a href="">about</a></li>
+                <li><a href="">team</a></li>
+                <li><a href="">work</a></li>
+                <li><a href="">prices</a></li>
+                <li><a href="">blog</a></li>
+                <li><a href="">contact</a></li>
+            </ul>
+        </nav>
+        <article>
+            <h1>Most flexible one page html5 template</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quos dignissimos suscipit possimus ad
+                distinctio magni ipsa, consequuntur animi sapiente facere vel nihil corrupti maiores ab accusantium
+                quaerat minima illo.</p>
+            <a class="btn" href="">Features</a>
+        </article>
+    </header>
+    <!-- fatures -->
+    <section class="features">
+        <article>
+            <h5>always behind the brands</h5>
+            <h4>A studio helping web 2.0 gain some momentum</h4>
+            <p>The integration of web fonts has always been one of the largest contributing factors to diversity in the
+                overall look and feel of websites today vs. yesterday.</p>
+            <a class="btn" href="">Features</a>
+        </article>
+        <article><img src="img/one.jpg" alt=""></article>
+    </section>
 </body>
 
 </html>
