--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header -->
     <header>
-        <nav>
+        <nav id="navbar">
             <a href="" class="logo">SYNX<br><span>multipurpose</span></a>
             <ul>
                 <li><a href="">home</a></li>
@@ -34,17 +34,230 @@
             <a class="btn" href="">Features</a>
         </article>
     </header>
-    <!-- fatures -->
-    <section class="features">
-        <article>
-            <h5>always behind the brands</h5>
-            <h4>A studio helping web 2.0 gain some momentum</h4>
+    <!-- about -->
+    <section class="about">
+        <article class="container-big">
+            <h6>always behind the brands</h6>
+            <hr class="underline">
+            <h2>A studio helping web 2.0 gain some momentum</h2>
             <p>The integration of web fonts has always been one of the largest contributing factors to diversity in the
                 overall look and feel of websites today vs. yesterday.</p>
             <a class="btn" href="">Features</a>
         </article>
-        <article><img src="img/one.jpg" alt=""></article>
     </section>
+    <!-- services -->
+    <section class="services py">
+        <h6>always behind the brands</h6>
+        <hr class="underline">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum sed pariatur placeat voluptate cupiditate, amet
+            itaque. Aut quaerat dolor sit, id repellat veritatis dolores, eum cupiditate corporis quia, provident eius.
+        </p>
+        <article>
+            <div>
+
+                <h4><i class="fab fa-twitter"></i>&nbsp;Sync across all devices</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ea dolor ipsum quas blanditiis sed
+                    excepturi eos, porro nulla tempore recusandae voluptatibus architecto id, in laboriosam quis
+                    voluptatum? Eligendi, atque!</p>
+                <a href="">Read more</a>
+            </div>
+
+            <div>
+
+                <h4><i class="fab fa-apple"></i>&nbsp;Endless design possibilities</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ea dolor ipsum quas blanditiis sed
+                    excepturi eos, porro nulla tempore recusandae voluptatibus architecto id, in laboriosam quis
+                    voluptatum? Eligendi, atque!</p>
+                <a href="">Read more</a>
+            </div>
+
+            <div>
+
+                <h4><i class="fas fa-bullseye"></i>&nbsp;Customer focused approach</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ea dolor ipsum quas blanditiis sed
+                    excepturi eos, porro nulla tempore recusandae voluptatibus architecto id, in laboriosam quis
+                    voluptatum? Eligendi, atque!</p>
+                <a href="">Read more</a>
+            </div>
+        </article>
+    </section>
+
+    <!-- creative -->
+    <section class="creative container-big">
+        <h6>always behind the brands</h6>
+        <a href="" class="btn">Creative Approach</a>
+    </section>
+
+    <!-- team -->
+    <section class="team container-mid py">
+        <h6>always behind the brands</h6>
+        <h2>Alwayse creative team</h2>
+        <!-- team 1 -->
+        <article>
+            <img src="img/people1.jpg" alt="">
+            <div class="wrapper">
+                <h3>Lopez Onight</h3>
+                <h4>CEO</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis omnis tenetur, accusamus
+                    exercitationem perferendis reprehenderit commodi animi soluta tempore recusandae.</p>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-git-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-behance-square"></i></a></li>
+                </ul>
+            </div>
+
+        </article>
+
+        <!-- team 2 -->
+        <article>
+            <img src="img/people2.jpg" alt="">
+            <div class="wrapper">
+                <h3>Jannie Mchales</h3>
+                <h4>CEO</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis omnis tenetur, accusamus
+                    exercitationem perferendis reprehenderit commodi animi soluta tempore recusandae.</p>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-git-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-behance-square"></i></a></li>
+                </ul>
+            </div>
+        </article>
+
+        <!-- team 3 -->
+        <article>
+            <img src="img/people3.jpg" alt="">
+            <div class="wrapper">
+                <h3>Briggite O&apos;niel</h3>
+                <h4>CEO</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis omnis tenetur, accusamus
+                    exercitationem perferendis reprehenderit commodi animi soluta tempore recusandae.</p>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-git-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-behance-square"></i></a></li>
+                </ul>
+            </div>
+        </article>
+
+    </section>
+
+    <!-- works -->
+    <section class="works">
+        <hgroup>
+            <h6>always behind the brands</h6>
+            <h2>Out amazing works</h2>
+        </hgroup>
+        <article>
+            <div class="half"><img src="img/project1.jpg" alt=""></div>
+            <div class="half">
+                <div><img src="img/project11.jpg" alt=""></div>
+                <div><img src="img/project3.jpg" alt=""></div>
+                <div><img src="img/project4.jpg" alt=""></div>
+                <div><img src="img/project5.jpg" alt=""></div>
+            </div>
+        </article>
+        <hgroup>
+            <h5>Load more projects <i class="fas fa-spinner"></i></h5>
+        </hgroup>
+    </section>
+
+    <!-- blog -->
+    <section class="blog py">
+        <article>
+            <h2>9</h2>
+            <h4>premium brands</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sapiente ducimus, tempora voluptatem
+                mollitia voluptatum, eius, unde magni architecto enim minus quisquam laboriosam! Distinctio esse
+                accusantium consequuntur iure nihil. Tempora.</p>
+        </article>
+
+        <article>
+            <h2>83</h2>
+            <h4>premium brands</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sapiente ducimus, tempora voluptatem
+                mollitia voluptatum, eius, unde magni architecto enim minus quisquam laboriosam! Distinctio esse
+                accusantium consequuntur iure nihil. Tempora.</p>
+        </article>
+
+        <article>
+            <h2>29</h2>
+            <h4>premium brands</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sapiente ducimus, tempora voluptatem
+                mollitia voluptatum, eius, unde magni architecto enim minus quisquam laboriosam! Distinctio esse
+                accusantium consequuntur iure nihil. Tempora.</p>
+        </article>
+
+        <article>
+            <h2>109</h2>
+            <h4>premium brands</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sapiente ducimus, tempora voluptatem
+                mollitia voluptatum, eius, unde magni architecto enim minus quisquam laboriosam! Distinctio esse
+                accusantium consequuntur iure nihil. Tempora.</p>
+        </article>
+    </section>
+
+    <section class="price container-mid py">
+        <hgroup>
+            <h6>always behind the brands</h6>
+            <h2>Plans are better than just an estimate</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum error porro, culpa optio quas id at
+                cumque
+                sint dolorem provident iste impedit commodi nesciunt debitis similique illo fugit adipisci recusandae.
+            </p>
+        </hgroup>
+        <article>
+            <div>
+                <h5>Strandard</h5>
+                <h2>350&dollar;</h2>
+                <ul>
+                    <li>5 email accounts</li>
+                    <li>50gb space</li>
+                    <li>Domain name</li>
+                    <li>100gb bandwith</li>
+                    <li>5 MySQL database</li>
+                    <li>Enhaced security</li>
+                </ul>
+            </div>
+
+            <div class="action">
+                <h5>Strandard</h5>
+                <h2>850&dollar;</h2>
+                <ul>
+                    <li>5 email accounts</li>
+                    <li>50gb space</li>
+                    <li>Domain name</li>
+                    <li>100gb bandwith</li>
+                    <li>5 MySQL database</li>
+                    <li>Enhaced security</li>
+                </ul>
+            </div>
+
+            <div>
+                <h5>Strandard</h5>
+                <h2>1350&dollar;</h2>
+                <ul>
+                    <li>5 email accounts</li>
+                    <li>50gb space</li>
+                    <li>Domain name</li>
+                    <li>100gb bandwith</li>
+                    <li>5 MySQL database</li>
+                    <li>Enhaced security</li>
+                </ul>
+            </div>
+
+        </article>
+    </section>
+
+
+    <!-- main js -->
+    <script src="js/main.js"></script>
 </body>
+
 
 </html>
