hamburger menu and responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
         <nav id="navbar">
             <a href="" class="logo">SYNX<br><span>multipurpose</span></a>
-            <ul>
+            <button id="menuBtn"><i class="fas fa-bars"></i></button>
+            <ul id="menuList">
                 <li><a href="">home</a></li>
                 <li><a href="">about</a></li>
                 <li><a href="">team</a></li>
@@ -44,15 +45,21 @@
                 overall look and feel of websites today vs. yesterday.</p>
             <a class="btn" href="">Features</a>
         </article>
+        <article></article>
     </section>
+
     <!-- services -->
     <section class="services py">
-        <h6>always behind the brands</h6>
-        <hr class="underline">
-        <h2>Lorem ipsum dolor sit amet.</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum sed pariatur placeat voluptate cupiditate, amet
-            itaque. Aut quaerat dolor sit, id repellat veritatis dolores, eum cupiditate corporis quia, provident eius.
-        </p>
+        <hgroup>
+            <h6>always behind the brands</h6>
+            <hr class="underline">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum sed pariatur placeat voluptate cupiditate,
+                amet
+                itaque. Aut quaerat dolor sit, id repellat veritatis dolores, eum cupiditate corporis quia, provident
+                eius.
+            </p>
+        </hgroup>
         <article>
             <div>
 
@@ -163,7 +170,7 @@
             </div>
         </article>
         <hgroup>
-            <h5>Load more projects <i class="fas fa-spinner"></i></h5>
+            <h5>Load more projects&nbsp;&nbsp;<i class="fas fa-spinner"></i></h5>
         </hgroup>
     </section>
 
